--- a/assets/styles.css
+++ b/assets/styles.css
@@ -192,9 +192,9 @@
     --color-surface-alt: var(--color-neutral-200);
     --color-on-surface: var(--color-neutral-800);
     --color-on-surface-strong: var(--color-black);
-    --color-on-surface-muted: color-mix(in srgb, oklch(26.9% 0 0) 70%, oklch(97% 0 0) 30%);
+    --color-on-surface-muted: color-mix(in srgb, oklch(26.9% 0 0) 85%, oklch(97% 0 0) 15%);
     @supports (color: color-mix(in lab, red, red)) {
-      --color-on-surface-muted: color-mix(in srgb, var(--color-on-surface) 70%, var(--color-surface) 30%);
+      --color-on-surface-muted: color-mix(in srgb, var(--color-on-surface) 85%, var(--color-surface) 15%);
     }
     --color-primary: var(--color-purple-500);
     --color-on-primary: var(--color-white);
@@ -206,9 +206,9 @@
     --color-surface-dark-alt: var(--color-neutral-900);
     --color-on-surface-dark: var(--color-neutral-300);
     --color-on-surface-dark-strong: var(--color-neutral-100);
-    --color-on-surface-dark-muted: color-mix(in srgb, oklch(87% 0 0) 70%, oklch(26.9% 0 0) 30%);
+    --color-on-surface-dark-muted: color-mix(in srgb, oklch(87% 0 0) 85%, oklch(26.9% 0 0) 15%);
     @supports (color: color-mix(in lab, red, red)) {
-      --color-on-surface-dark-muted: color-mix(in srgb, var(--color-on-surface-dark) 70%, var(--color-surface-dark) 30%);
+      --color-on-surface-dark-muted: color-mix(in srgb, var(--color-on-surface-dark) 85%, var(--color-surface-dark) 15%);
     }
     --color-primary-dark: var(--color-purple-400);
     --color-on-primary-dark: var(--color-black);
